[package]
name = "rtools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rtools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.2.2", features = ["default"] }
tauri-plugin-opener = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"  # 最小化二进制大小
strip = true     # 自动剥离符号

